--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -1,6 +1,6 @@
 .hover:hover {
   /* box-shadow: 1px 1px 5px 2px rgba(100, 100, 100, 0.7); */
-  transition: 0.8s;
+  transition: 0.8ms;
   font-weight: 700;
   font-size: 3rem;
   color: red;
